<resources>
    <string name="app_name">NovelSocial</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <string name="back4app_app_id">d7ERFN8wHE3BStSazXAe77FGqiHb7aT1ko0RNSKu</string>
    <string name="app_name_splash">Novel Social</string>
    <string name="back4app_client_key">Gg0Jh9MEXnBMKvI3yhtFOzmimZpfmGYhU0Wybu9b</string>
    <string name="home_message">Don\'t Know What To Search? Check Out Some Books From These Popular Genres!</string>
    <string name="rv_parent_text_view">Title</string>
    <string name="book_cover_description">Book Image</string>
    <string name="bookAuthor">Author:</string>
    <string name="open_in_web">Open in Web</string>
    <string name="search_button_title">SearchView</string>
    <string name="logout_menu_item">Logout</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="code_found_button">Code found</string>
    <string name="new_username_field">New Username</string>
    <string name="new_password_field">New Password</string>
    <string name="old_password_field">Old Password</string>
    <string name="confirm_password_field">Confirm Password</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="welcome_to_novel_social_label">Welcome to Novel Social!</string>
    <string name="let_s_create_your_new_account_message">Let\'s create your new account!</string>
    <string name="last_name_field">Last Name</string>
    <string name="full_name_field">Full Name</string>
    <string name="new_full_name_field">New Full Name</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="name_placeholder">Name</string>
    <string name="fun_fact">Fun Fact</string>
    <string name="profile_full_name_placeholder">\@Username</string>
    <string name="no_of_library_items">0 books</string>
    <string name="items_in_your_library_label">In Your Library</string>
    <string name="account_options_label">Account Options</string>
    <string name="change_full_name_dialog_header">Change your Full Name</string>
    <string name="change_username_dialog_header">Change your Username</string>
    <string name="change_password_dialog_header">Change your Password</string>
    <string name="update_label">Update</string>
    <string name="add_to_your_library">Add to your library</string>
    <string name="remove">Remove</string>
    <string name="image">Image</string>
    <string name="comments">Comments</string>
    <string name="toggles_comment_section">Toggles comment section</string>
    <string name="add_comment">Add Comment</string>
    <string name="what_are_your_thoughts_on_the_book">What are your thoughts?</string>
</resources>