<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_outline_search_24"
        app:showAsAction="ifRoom"
        android:title="@string/search_button_title"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:orderInCategory="5">
    </item>

    <item
        android:id="@+id/action_scan_qr_code"
        android:icon="@drawable/ic_baseline_qr_code_scanner_24"
        app:showAsAction="ifRoom"
        android:title="@string/scan_qr_code">
    </item>

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_baseline_close_24"
        app:showAsAction="never"
        android:title="@string/logout_menu_item">
    </item>
</menu>