<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:windowSoftInputMode="adjustResize">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_full_name_dialog_header"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="7dp"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="7dp"
        android:layout_marginHorizontal="7dp"
        android:background="#A9A9A9" />

    <EditText
        android:id="@+id/et_fullName"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:autofillHints="name"
        android:hint="@string/new_full_name_field" />

    <Button
        android:id="@+id/bt_update_fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="end"
        android:text="@string/update_label" />

</LinearLayout>
