<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:windowSoftInputMode="adjustResize">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_username_dialog_header"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="7dp"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="7dp"
        android:layout_marginHorizontal="7dp"
        android:background="#A9A9A9"
        android:layout_below="@+id/header"/>


    <EditText
        android:id="@+id/et_new_username"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:autofillHints="name"
        android:hint="@string/new_username_field"
        android:layout_below="@+id/divider"/>

    <Button
        android:id="@+id/bt_update_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/update_label"
        android:layout_below="@id/et_new_username"
        android:layout_alignEnd="@+id/et_new_username"/>

</RelativeLayout>