<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:windowSoftInputMode="adjustResize">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password_dialog_header"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="7dp"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/header"
        android:layout_marginHorizontal="7dp"
        android:layout_marginVertical="7dp"
        android:background="#A9A9A9" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_new_password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        app:passwordToggleEnabled="true"
        android:layout_below="@+id/divider">

        <EditText
            android:id="@+id/et_new_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/new_password_field"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_confirm_new_password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_below="@id/et_new_password"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_confirm_new_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:background="@color/white"
            android:hint="@string/confirm_password_field"
            android:inputType="textPassword"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_update_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="end"
        android:text="@string/update_label"
        android:layout_below="@+id/et_confirm_new_password"
        android:layout_alignEnd="@+id/divider"/>

</RelativeLayout>